--- a/about.html
+++ b/about.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">  
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Bambi Playlist Creator | About</title> 
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags --> 
+  <title>Bambi Playlist Creator | Home</title>  
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet"> 
-  <meta name="description" content="Bambi Playlist Creator, a sharing/creation platform for Bambi Sleep Playlists" />
-
+  <link href="css/style.css" rel="stylesheet">   
+  <meta name="description" content="Bambi Playlist Creator, a sharing/creation platform for Bambi Sleep Playlists. This is the home page where you can create your playlists!" />
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EWDFYH4Z6D"></script>
   <script>
@@ -20,6 +19,7 @@
 
     gtag('config', 'G-EWDFYH4Z6D');
   </script>
+  
 </head>    
 
 <body>
@@ -33,36 +33,12 @@
     <div class="row">
       <div class="col-lg-12">
         <h1 class="text-center">Bambi Playlist Creator v1.1.1</h1>
-        <br />
         <div id="content">
-          <hr />
-          <form onInput="inputHandle();" onSubmit="return false;">
-            Bambi Playlist Creator is a small project that I (Katie, Kat for short) created because I was frustrated that I had to go and find 
-            specific files from all over the place and then use some sketchy audio file splicer to patch them together. The worse thing was that
-            I also had to use up TONS of cloud storage if I wanted to share my playlist with anyone and go through the sharing permission shenanigans
-            as well. Bambi Playlist Creator solves All these issues with playlist sharing, custom and easy ordering!!<br><br> 
-            Instructions: Click the checkboxes to select the file you want in your playlist. Drag the GRAY PART of the box in the change order section, if you click and drag
-            the link part it will cause errors (if you accidentally do this, just check and uncheck a checkbox and it should fix it). Click create AFTER ANY CHANGES! Click the play 
-            and pause buttons to play and pause the playlist. Copy the permalink and share it with your friends to enjoy the Bambi Sleep Experience together!
-            <br><br> Please contact me with any feedback! <br>KatieGirl#3059<br><a href="https://discord.gg/kHxKqRC3vs">My Discord server</a><br><a href="https://hypnotube.com/user/katiegirl-39074/">Me on Hypnotube</a>
-            <br>
-            <h3>Changelog</h3>
-            <p>v1.0.0 - First release! Not all files added and minor bugs (including mediafire hosting)</p>
-            <p>v1.0.1 - Fixed almost all bugs (except mediafire hosting bug) </p>
-            <p>v1.0.2 - Added About, Permalink pages. Added navbar and create button no longer needed. Fixed hosting problem (i think) using google drive now. Please let me know if there are any problems!</p>
-            <p>v1.1.0 - First minor version, added progress bar and download button, beginning refactoring code, still need to debug iOS, please give me more suggestions</p>
-            <p>v1.1.1 - Minor bug fixes, adding in service worker for caching</p>
-
-            <br>
-            <h3>Donate</h3>
-            Feel free to donate BTC, ETH or DOGE to these addresses. It really helps out!
-            <br>
-            BTC: 13fQtM7ZPzJinnsp612QhnNAUi8WEmgSv3<br>
-            ETH: 0xabcfa16abba8df9e82e211929b3ddaba743f8665<br>
-            DOGE: DBq1LuGvpUXDrMQsqX4czftuffNMYGpthU
-            <hr/>
-          </form>
-          <p class="text-center"><a href="/index.html">Home</a></p>
+          <h2>NOTICE:</h2>
+          <p>bambi playlist has been an awesome and fairly successful project of mine but it is time to move on :). I don't have the time or the commitment to keep it maintained anymore but thank you for all your 
+          support and kind words! In 15 seconds you will be redirected automatically to the <a href="https://bambicloud.com/">bambicloud.com</a> website maintained by bambiislv. She has done
+          an amazing job (she's waaay better at frontend than me hehe) at taking a cool idea and turning it into something awesome.</p>
+          <p>On a side note, I have also conducted a security audit on bambicloud's infrastructure and code (all of the problems were remediated quickly and without impact) and will continue to help keep it secure.</p>
         </div>
       </div>
     </div>
@@ -72,6 +48,7 @@
       © KatieGirl 2021 | KatieGirl#3059 <a href="https://discord.gg/kHxKqRC3vs">https://discord.gg/kHxKqRC3vs</a> - All of the Bambi/Bambi Sleep copyright goes to the creator or Bambi Sleep (<a href="https://bambisleep.blogspot.com/">https://bambisleep.blogspot.com/</a>)
     </div>
   </footer>
+  <script>setTimeout(()=> {window.location = "https://bambicloud.com/"}, 15000)</script>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
